# Src_DYAD_UCX_Perftest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  perftest_optimizations.cmake
analysis/: dyad_ucx_perftest_analysis_playground.ipynb
data/: client.cali  client1.cali  client2.cali  client3.cali  client4.cali  client5.cali  client6.cali  client7.cali  client8.cali  client_rndv.cali  server.cali  server1.cali  server2.cali  server3.cali  server4.cali  server5.cali  server6.cali  server7.cali  server8.cali  server_rndv.cali
run/: gen_submission.py  lib_path.sh  run_template.sh
spack_env/: spack.yaml
src/: CMakeLists.txt  client.cpp  client.hpp  dyad_ucx_perftest.cpp  dyad_ucx_perftest_client.cpp  dyad_ucx_perftest_server.cpp  oob_comm.cpp  oob_comm.hpp  server.cpp  server.hpp  utils.h
src/backends/: CMakeLists.txt  abstract_backend.cpp  abstract_backend.hpp
src/backends/tag_backend/: tag_backend.cpp  tag_backend.hpp
